// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableComponent can mount 1`] = `
"
            <div id=\\"app\\"><div class=\\"table-component\\"><div class=\\"table-component__filter\\"><input type=\\"text\\" name=\\"table-component-filter\\" placeholder=\\"Filter table…\\" class=\\"table-component__filter__field\\"> <!----></div> <div class=\\"table-component__table-wrapper\\"><table class=\\"table-component__table\\"><thead><tr><th class=\\"table-component__th--sort\\">
    First name
</th></tr></thead> <tbody><tr><td>John</td></tr><tr><td>Paul</td></tr></tbody></table></div> <!----> <div style=\\"display: none;\\"><th>
    First name
</th></div></div></div>
        "
`;

exports[`TableComponent has an prop to disable the filter 1`] = `
"
            <div id=\\"app\\"><div class=\\"table-component\\"><!----> <div class=\\"table-component__table-wrapper\\"><table class=\\"table-component__table\\"><thead><tr><th class=\\"table-component__th--sort\\">
    First name
</th></tr></thead> <tbody><tr><td>John</td></tr><tr><td>Paul</td></tr></tbody></table></div> <!----> <div style=\\"display: none;\\"><th>
    First name
</th></div></div></div>
        "
`;
